c/src/test/resources/c/nec_inline_bnc/valid/ex49-3.ctrl
<controlFile>
  <sourceFile name="../ex49.c" id="1" />
  <run>
    <startPosition fileId="1" line="1" />
    <wayPoint fileId="1" line="5" >
      <loop iterTimes="3" />
    </wayPoint>
    <endPosition fileId="1" line="8" />
  </run>
</controlFile>