c/src/test/resources/c/nec_inline_bnc/invalid/ex7-3.ctrl
<controlFile>
  <sourceFile name="../ex7.c" id="1" />
  <run>
    <startPosition fileId="1" line="2" />
    <wayPoint fileId="1" line="13" >
      <loop iterTimes="3" />
    </wayPoint>
    <endPosition fileId="1" line="18" />
  </run>
</controlFile>